--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
 <body>
   <header>
     <div class='container'>
+      <div class="row">
+        <div class='col-sm-3'>
+          <div>
+            <input id='searchInput' placeholder='Beer Name'>
+            <div>
+              <button id='searchBtn'>Find</button>
+            </div>
+          </div>
+
+        </div>
+        <div class='col-sm-9'>
+          <div id='beerContainer'>
+          </div>
+        </div>
+      </div>
 
     </div>
   </header>
