--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
   <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css'>
   <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css">
   <link rel='stylesheet' href='css/style.css'></link>
 </head>
 
@@ -14,13 +15,12 @@
     <div class='container'>
       <div class="row">
         <div class='col-sm-3'>
-          <div>
+          <div class='wow slideInLeft'>
             <input id='searchInput' placeholder='Beer Name'>
             <div>
               <button id='searchBtn'>Find</button>
             </div>
           </div>
-
         </div>
         <div class='col-sm-9'>
           <div id='beerContainer'>
@@ -28,9 +28,9 @@
         </div>
       </div>
 
-    </div>
   </header>
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js'></script>
   <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js'></script>
   <script src='./js/wow.min.js'></script>
