--- a/index.html
+++ b/index.html
@@ -14,22 +14,31 @@
 <body>
   <header>
     <div class='container'>
-      <h1 class='lead'>Beer Critic</h1>
-      <div class='wow slideInLeft search'>
-        <input class='form-control' id='searchInput' placeholder='Beer Name'>
-        <button class='btn btn-default' id='searchBtn'>Find</button>
-      </div>
-      <div class="row">
-        <div class='col-sm-4'>
-          <div id='beerInfo'></div>
-        </div>
-        <div class='col-sm-8'>
-          <div id='beerContainer' class='multiple-items'>
+      <h1 class='title'>Beer Critic</h1>
+
+      <div class='row'>
+        <div class='col-md-8 col-md-offset-2'>
+          <div class='wow slideInLeft search input-group'>
+            <input class='form-control' id='searchInput' placeholder='Beer Name'>
+            <span class='input-group-btn'>
+              <button class='btn btn-default' id='searchBtn'>Find</button>
+            </span>
           </div>
         </div>
       </div>
-
   </header>
+  <div class='container'>
+    <div class="row">
+      <div class='col-sm-4'>
+        <div id='beerInfo'></div>
+      </div>
+      <div class='col-sm-8'>
+        <div id='beerContainer' class='multiple-items responsive'>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js'></script>
   <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js'></script>
