ui change to next and previous button

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Beer Critic</title>
+  <title>Beer Lookup</title>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
   <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css'>
   <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
@@ -14,11 +14,10 @@
 <body>
   <header>
     <div class='container'>
-      <h1 class='title'>Beer Critic</h1>
-
+      <h1 class='title'>Beer Lookup</h1>
       <div class='row'>
-        <div class='col-md-8 col-md-offset-2'>
-          <div class='wow slideInLeft search input-group'>
+        <div class='col-md-8 col-md-offset-2 wow slideInLeft'>
+          <div class='search input-group'>
             <input class='form-control' id='searchInput' placeholder='Beer Name'>
             <span class='input-group-btn'>
               <button class='btn btn-default' id='searchBtn'>Find</button>
@@ -26,6 +25,7 @@
           </div>
         </div>
       </div>
+    </div>
   </header>
   <div class='container'>
     <div class="row">
@@ -40,7 +40,6 @@
   </div>
 
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js'></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js'></script>
   <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick.min.js'></script>
