popover and border

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class='row'>
         <div class='col-md-8 col-md-offset-2 wow slideInLeft'>
           <div class='search input-group'>
-            <input class='form-control' id='searchInput' placeholder='Beer Name'>
+            <input class='form-control' id='searchInput' placeholder='Beer Name' data-container="body" data-toggle="popover" data-placement="bottom" data-content="Beer Not Found">
             <span class='input-group-btn'>
               <button class='btn btn-default' id='searchBtn'>Find</button>
             </span>
